# coding-problems

./: .gitignore  CMakeLists.txt  push.sh  run.sh
algorithms/: CMakeLists.txt  run.sh
data_structures/: CMakeLists.txt  run.sh
leetcode/: 0_template.cpp  1014_best_sightseeing_pair.py  1049_last_stone_weight_2.py  1051_height_checker.py  1137_n_th_tribonacci_number.py  113_path_sum_2.py  1140_stone_game_2.py  1155_number_of_dice_rolls_with_target_sum.py  117_populating_next_right_pointers_in_each_node_2.py  11_container_with_most_water.py  120_triangle.py  121_best_time_to_buy_and_sell_stock.py  122_best_time_to_buy_and_sell_stock_2.py  1288_remove_covered_intervals.py  129_sum_root_to_leaf_nodes.py  1302_deepest_leaves_sum.py  1306_jump_game_3.py  1325_delete_leaves_with_a_given_value.py  134_gas_station.py  1372_longest_zigzag_path_in_a_binary_tree.py  1376_time_needed_to_inform_all_employees.py  138_copy_list_with_random_pointer.py  139_word_break_1.py  142_linked_list_cycle_2.py  1438_longest_continuous_subarray_with_absolute_diff_less_than_or_equal_to_limit.py  1442_minimum_time_to_collect_all_apples_in_a_tree.cpp  1447_simplified_fractions.py  1448_count_good_nodes_in_binary_tree.py  1477_find_two_non_overlapping_sub_arrays_each_with_target_sum.py  1487_making_file_names_unique.py  148_sort_list.py  1492_kth_factor_of_n.py  1507_reformat_date.py  152_maximum_product_subarray.py  1578_minimum_time_to_make_rope_colorful.py  161_one_edit_distance.py  1653_minimum_deletions_to_make_string_balanced.py  1686_stone_game_6.py  1690_stone_game_7.py  (+108 more)
misc/: cs2050_hw12.py
(+7 files in other folders)
